# ML

./: pyproject.toml
lab_works/lab_0/: fisher_irises.csv  lab_0.ipynb
lab_works/lab_1/: cleaned_dataset.csv  lab_1.ipynb  video-games-sales-analysis-and-visualization.ipynb
lab_works/lab_2/: Lab2.ipynb  lab_2_example_plus_task.ipynb
lab_works/lab_2/cool_examples/: Sweetviz_Report.html  classify-possum-population.ipynb  laptop-price-predictions-beginner-friendly.ipynb
lab_works/lab_3/: lab_3_classification.ipynb
lab_works/lab_4/: Lab4.ipynb
lab_works/lab_4/example/: example_of_lab_4.ipynb  hand_crafted_realization_v1.ipynb
lab_works/lab_5/: lab5.ipynb  task.md
lab_works/lab_5/example/: fashion_mnist_dataset_conv.ipynb  full_dense_net.ipynb  simple_conv_net.ipynb
practical_lessons/lesson_0/: Pract - Boston quick.ipynb  Pract1.ipynb  base_libs.ipynb  my_first_jupyter_notebook.ipynb  titanic-data-science-solutions-a6a574.ipynb
