[tool.poetry]
name = "ml"
version = "0.1.0"
description = ""
authors = ["fade <dimabreusgo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.5"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
